# online_policy_adaptation_using_rollout

./: .gitignore  LICENSE  README.md  setup.cfg
application/deploy/: compute_info_1.yaml  compute_info_2.yaml  db1.yaml  db2.yaml  front_node.yaml
application/networking/: destination-rule-all.yaml
application/networking/user_based_rules/: command_to_file.py  user_based_weight.yaml
application/scaling/: command_to_file.py
collected_data_traces_from_testbed/scenario2/: data_after_change.csv  data_before_change.csv
collected_data_traces_from_testbed/scenario3/: data.csv
documentation/: data_collection.md  data_traces_from_testbed.md  load_generator.md  microservice_application_for_this_work.md  underlying_framework.md
examples/: run_scenario_1.py  run_scenario_2.py  run_scenario_3.py
src/algorithms/: rollouts_scenario_1.py
src/evaluation/: evaluate_scenario_1.py
src/online_policy_adaptation_using_rollout/algorithms/: policy_iteration_scenario_1.py  rollouts_scenario_1.py
src/online_policy_adaptation_using_rollout/data_collection/: data_collection.py
src/online_policy_adaptation_using_rollout/evaluation/: evaluate_scenario_1.py  evaluation.py  evaluation_using_base_policy.py
src/online_policy_adaptation_using_rollout/load_generator/: async_load_generator.py
src/online_policy_adaptation_using_rollout/ppo_base_policy/: training_ppo_agent.py
src/online_policy_adaptation_using_rollout/system_model/: learning_system_model.py  system_model_scenario_1.py
src/ppo_base_policy/: training_ppo_agent.py
src/ppo_base_policy/scenario_1_env/: __init__.py  routing_env.py  routing_middle_ware.py
trained_models/scenario_2/: new_system_model.joblib  system_model.joblib
trained_models/scenario_3/: new_system_model.joblib  system_model.joblib
(+21 files in other folders)
