[metadata]
name = online_policy_adaptation_using_rollout
version = attr: online_policy_adaptation_using_rollout.__version__
description = NOMS2024 paper: Online Policy Adaptation for Networked Systems Using Rollout
author = Forough Shahabsamani and Kim Hammar
author_email = hammar.kim@gmail.com
license = Creative Commons Attribution-ShareAlike 4.0 International
keywords = Reinforcement-Learning Markov-Decision-Processes Rollout Networked Systems Resource Management
license_files =
    - LICENSE.md
    - README.md
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research

[options]
install_requires =
    numpy>=1.23.5
    gym==0.21.0
    gymnasium==0.29.1
    joblib==1.2.0
    matplotlib==3.7.2
    pandas==2.0.3
    requests==2.31.0
    sb3-contrib==1.7.0
    scikit-learn==1.1.2
    scipy==1.10.1
    stable-baselines3==1.7.0
    torch==2.0.1
    torchvision==0.15.2

python_requires = >=3.8
package_dir =
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    flake8>=6.1.0
    tox>=3.24
    twine>=4.0.2
    build>=0.10.0

[options.package_data]
csle_tolerance = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,*_pb2*,*init__*,.tox
ignore = E741, W503, W504, F821, W605
rst-roles = class, func, ref
rst-directives = envvar, exception
rst-substitutions = version
extend-ignore = D401, D400, D100, RST305, RST219, D205, D202, D200, D204, RST206, W293, D403, D402, RST306

